# hermes

./: .flake8  .gitignore  .mailmap  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  REUSE.toml  changelog.md  hermes.conf  hermes.toml  poetry.lock.license  pyproject.toml
.github/ISSUE_TEMPLATE/: add-plugin-to-marketplace.yml
.github/workflows/: cffconvert.yml  check-licenses.yml  hermes-zenodo-sandbox.yml  hermes-zenodo.yml  release.yml  tests.yml
.hermes/curate/: hermes.json  target_branch
LICENSES/: LicenseRef-BSD-Caltech.txt
docs/: Makefile  README.md  make.bat  requirements.txt
docs/adr/: 0001-use-SWORD-interfaces-for-deposit.md  0002-use-a-common-data-model.md  0003-define-interfaces-for-inter-module-data-exchange.md  0004-use-high-level-modularization.md  0005-support-curation.md  0006-use-python-in-docker-as-base-technology.md  0007-expose-internal-data-model-to-allow-mapping-configurations.md  0008-test-strategy.md  0009-we-care-for-code-quality.md  0010-use-click-for-CLI-commands.md  0011-CLI-takes-single-sources-and-targets.md  0011-record-provenance-of-metadata.md  0012-overall-data-model-design.md  0013-plugin-init.md  0014-standardized-provenance-recording.md  index.md
docs/adr/hermes-prov-diagram/: hermes-prov.drawio  hermes-prov.svg.license
docs/source/: adr  cli.rst  conf.py  index.md  index.rst  plugins-schema.json  plugins.json
docs/source/_ext/: plugin_markup.py
docs/source/_static/: custom.css
docs/source/_static/img/: header.png.license  hermes-visual-blue.svg.license  opengraph-workflow.png.license  workflow-overview.svg.license
docs/source/_templates/: funding.html  plugins.html  plugins.md
docs/source/adr/: 0002-use-a-common-data-model.md  0005-support-curation.md  0010-use-click-for-CLI-commands.md
docs/source/dev/: contribute.md  data_model.md  releasing.md  start.md
docs/source/manual/: cli.md  index.md
docs/source/plugins/: marketplace.md  plugins-schema.json.license  plugins.json
docs/source/project/: events.md  index.md  presentations.md  resources.md
docs/source/tutorials/: 001-prepare-your-project.md  automated-publication-with-ci.md  writing-a-plugin-for-hermes.md
src/hermes/: __init__.py  __main__.py  cli.py  config.py  error.py  logger.py  settings.py  utils.py
src/hermes/commands/: __init__.py  base.py  cli.py  harvest.py  marketplace.py  workflow.py
src/hermes/commands/clean/: base.py
src/hermes/commands/curate/: accept.py  base.py
src/hermes/commands/deposit/: base.py  dataverse.py  error.py  file.py  invenio.py  invenio_rdm.py  rodare.py
src/hermes/commands/harvest/: __init__.py  base.py  cff.py  codemeta.py  file_exists.py  git.py  pyproject.py  util.py
src/hermes/commands/harvest/util/: __init__.py  remote_harvesting.py  token.py  validate_codemeta.py
src/hermes/commands/init/: __init__.py  base.py  connect_github.py  connect_gitlab.py  connect_with_github.py  connect_with_gitlab.py  connect_with_zenodo.py  connect_zenodo.py  github_permissions.py  github_secrets.py  oauth_github.py  oauth_process.py  oauth_zenodo.py  slim_click.py  tmp_hermes_github_to_zenodo.yml
src/hermes/commands/init/util/: connect_github.py  connect_gitlab.py  connect_zenodo.py  git_info.py  oauth_process.py  slim_click.py
src/hermes/commands/postprocess/: base.py  invenio.py  invenio_rdm.py
src/hermes/commands/prepare_deposit/: __init__.py  invenio.py
src/hermes/commands/process/: base.py  cff.py  git.py  merge.py
src/hermes/model/: __init__.py  api.py  context.py  context_manager.py  error.py  errors.py  ld_data.py  ld_utils.py  linked_data.py  merge.py  path.py  pydantic_ld.py
src/hermes/model/merge/: action.py  container.py  match.py  strategy.py
src/hermes/model/prov/: ld_prov.py  ld_prov_node.py
src/hermes/model/types/: __init__.py  ld_container.py  ld_context.py  ld_dict.py  ld_list.py  pyld_util.py
src/hermes/model/types/schemas/: codemeta.jsonld  codemeta.jsonld.license  hermes-content.jsonld  hermes-git.jsonld  hermes-runtime.jsonld  index.json  index.json.license  schemaorg-current-http.jsonld  schemaorg-current-http.jsonld.license  schemaorg-current-https.jsonld  schemaorg-current-https.jsonld.license  w3c-prov.ttl  w3c-prov.ttl.license
test/: __init__.py
test/hermes_test/: conftest.py  mocks.py  test_cli.py  test_main.py  test_marketplace.py  test_utils.py
test/hermes_test/commands/: test_harvest.py
test/hermes_test/commands/clean/: test_base.py
test/hermes_test/commands/deposit/: test_invenio.py
test/hermes_test/commands/harvest/: test_cff.py  test_codemeta.py  test_git.py  test_util.py
test/hermes_test/commands/init/: test_init.py
test/hermes_test/commands/process/: test_git.py
test/hermes_test/model/: test_api.py  test_api_e2e.py  test_base_context.py  test_codemeta_context.py  test_context_manager.py  test_harvest_context.py  test_jsonld_dict.py
test/hermes_test/model/types/: __init__.py  conftest.py  test_ld_container.py  test_ld_context.py  test_ld_dict.py  test_ld_list.py  test_pyld_util.py
test/pydalos_test/: test_linked_data.py
util/: README.md  add-copyright-headers.py
