# SPDX-FileCopyrightText: 2022 German Aerospace Center (DLR), Helmholtz-Zentrum Dresden-Rossendorf
#
# SPDX-License-Identifier: CC0-1.0

# SPDX-FileContributor: Stephan Druskat <stephan.druskat@dlr.de>
# SPDX-FileContributor: Michael Meinel
# SPDX-FileContributor: David Pape

[project]
name = "hermes"
version = "0.10.0.dev1"
description = "Workflow to publish research software with rich metadata"
license = "Apache-2.0 AND LicenseRef-BSD-Caltech"
authors = [
    { name = "Michael Meinel", email = "michael.meinel@dlr.de" },
    { name = "Stephan Druskat", email = "stephan.druskat@dlr.de" },
    { name = "David Pape", email = "d.pape@hzdr.de" },
    { name = "Sophie Kernchen", email = "sohpie.kernchen@dlr.de" },
    { name = "Oliver Bertuch", email = "o.bertuch@fz-juelich.de" },
    { name = "Nitai Heeb", email = "n.heeb@fz-juelich.de" },
]
maintainers = [
    { name = "Stephan Druskat", email = "stephan.druskat@dlr.de" },
]
readme = "README.md"
repository = "https://github.com/softwarepub/hermes"
keywords = ["publishing", "metadata", "automation"]

dependencies = [
    "ruamel.yaml>=0.17.21, <0.18.0",
    "jsonschema>=3.0.0, <4.0.0",
    "pyld>=2.0.3, <3.0.0",
    "cffconvert>=2.0.0, <3.0.0",
    "toml>=0.10.2, <1.0.0",
    "pyparsing>=3.0.9, <4.0.0",
    "requests>=2.28.1, <3.0.0",
    "pydantic>=2.5.1, <3.0.0",
    "pydantic-settings>=2.1.0, <3.0.0",
    "requests-oauthlib>=2.0.0, <3.0.0",
    "pynacl>=1.5.0, <2.0.0",
]
requires-python = ">=3.10, <4.0.0"

[project.urls]
homepage = "https://hermes.software-metadata.pub"
documentation = "https://hermes.software-metadata.pub"
repository = "https://github.com/softwarepub/hermes.git"
issues = "https://github.com/softwarepub/hermes/issues"


[project.scripts]
hermes = "hermes.commands.cli:main"
hermes-marketplace = "hermes.commands.marketplace:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.1, <8.0.0",
    "pytest-cov>=3.0.0, <4.0.0",
    "taskipy>=1.10.3, <2.0.0",
    "flake8>=5.0.4, <6.0.0",
    "requests-mock>=1.10.0, <2.0.0"
    "reuse>=1.1.2, <2.0.0",
]
docs = [
    "Sphinx>=6.2.1, <7.0.0",
    "myst-parser>=2.0.0, <3.0.0",
    "sphinx-book-theme>=1.0.1, <2.0.0",
    "sphinx-favicon>=0.2, <1.0.0",
    "sphinxcontrib-contentui>=0.2.5, <1.0.0",
    "sphinxcontrib-images>=0.9.4, <1.0.0",
    "sphinx-icon>=0.1.2, <1.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autoapi>=3.0.0, <4.0.0",
    "sphinxemoji>=0.2.0, <1.0.0",
    "sphinxext-opengraph>=0.6.3, <1.0.0",
    "sphinxcontrib-mermaid>=0.8.1, <1.0.0",
    "sphinx-togglebutton>=0.3.2, <1.0.0",
    "sphinxcontrib-datatemplates>=0.11.0, <1.0.0",
]


[project.entry-points."hermes.harvest"]
cff = "hermes.commands.harvest.cff:CffHarvestPlugin"
codemeta = "hermes.commands.harvest.codemeta:CodeMetaHarvestPlugin"

[project.entry-points."hermes.deposit"]
file = "hermes.commands.deposit.file:FileDepositPlugin"
invenio = "hermes.commands.deposit.invenio:InvenioDepositPlugin"
invenio_rdm = "hermes.commands.deposit.invenio_rdm:IvenioRDMDepositPlugin"
rodare = "hermes.commands.deposit.rodare:RodareDepositPlugin"

[project.entry-points."hermes.postprocess"]
config_invenio_record_id = "hermes.commands.postprocess.invenio:config_record_id"
config_invenio_rdm_record_id = "hermes.commands.postprocess.invenio_rdm:config_record_id"
cff_doi = "hermes.commands.postprocess.invenio:cff_doi"


[tool.taskipy.tasks]
docs-build = "poetry run sphinx-build -M html docs/source docs/build -W"
docs-clean = "poetry run sphinx-build -M clean docs/source docs/build"
docs-live = "poetry run sphinx-autobuild docs/source docs/build"
flake8 = "poetry run flake8 ./test/ ./src/ --count --select=E9,F63,F7,F82 --statistics"


[tool.pytest.ini_options]
norecursedirs = "docs/*"
testpaths = [
    "test"
]
addopts = "--cov=hermes --cov-report term"


[build-system]
requires = [
    "poetry-core>=2.1.3, <3.0.0"
]
build-backend = "poetry.core.masonry.api"
